getMemoryUsage doesn't include memory allocated from measurement batching

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-04-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We added a new tracking context in SERVER-101675 for measurement batching. We did not include this in getMemoryUsage, which means that we are underreporting memory usage in getMemoryUsage.

      This was found when trying to re-enable timeseries_collstats.js and failing for one of the tests that checked testIdleBucketExpiry()

            Assignee:
            Stephanie Eristoff
            Reporter:
            Stephanie Eristoff
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: