SERVER-103171 getMemoryUsage doesn't include memory allocated from measurement batching (#34382)

GitOrigin-RevId: a000155c38c132306bc9b2774af22e7ce52eaa00